quickAlgo-doc: Add some images and comments

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -36,6 +36,11 @@ table, th, td {
   font-weight: bold;
   text-align: center;
 }
+
+.blockImg {
+  max-width: 200px;
+  max-height: 160px;
+}
   </style>
 </head>
 <body>
