quickAlgo-doc: librairie → bibliothèque + other typos
Signed-off-by: Sylvain Chiron <chironsylvain@orange.fr>

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -44,13 +44,13 @@ table, th, td {
   </style>
 </head>
 <body>
-  <h1 class="doc_title">quickAlgo library documentation</h1>
+  <h1 class="doc_title">Documentation des bibliothèques quickAlgo</h1>
   <div>
     <p>
       <a class="blockly_title" href="#blockly">Documentation des blocs génériques Blockly</a>
     </p>
     <p>
-      <span class="lib_select">Librairie :</span>
+      <span class="lib_select">Bibliothèque :</span>
       <select id="lib" onchange="generateLangSelector();">
         <option value="blocklyRobot">blocklyRobot</option>
       </select>
