Add draft of new lib ‘blocklyProcessing’
Signed-off-by: Frigory33 <chironsylvain@orange.fr>

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -18,6 +18,10 @@ contexts['blocklyPrinter'] = getContext;
   <script type="text/javascript">
 contexts['blocklyTurtle'] = getContext;
   </script>
+  <script type="text/javascript" src="../blocklyProcessing_lib.js"></script>
+  <script type="text/javascript">
+contexts['blocklyProcessing'] = getContext;
+  </script>
   <style>
 table {
   border-collapse: collapse;
