quickAlgo doc: Remove ‘de’ strings which were just a copy of ‘en’; display subcategory names
Signed-off-by: Frigory33 <chironsylvain@orange.fr>

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="../../ext/jquery/2.1/jquery.min.js"></script>
   <script type="text/javascript" src="blockly_blocks.js"></script>
   <script type="text/javascript" src="context.js"></script>
+  <script type="text/javascript" src="i18n.js"></script>
   <script type="text/javascript" src="doc.js"></script>
   <script type="text/javascript" src="../blocklyRobot_lib-0.9.1.js"></script>
   <script type="text/javascript">
