fix doc for processing library

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title class="doc_title">quickAlgo library documentation</title>
   <script type="text/javascript" src="../../ext/jquery/2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../ext/processing/1.4.8/processing.min.js"></script>
   <script type="text/javascript" src="blockly_blocks.js"></script>
   <script type="text/javascript" src="context.js"></script>
   <script type="text/javascript" src="i18n.js"></script>
