quickAlgo: Add quick-pi in the auto-documentation

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -25,6 +25,10 @@ contexts['blocklyTurtle'] = getContext;
   <script type="text/javascript">
 contexts['blocklyProcessing'] = getContext;
   </script>
+  <script type="text/javascript" src="../blocklyQuickPi_lib.js"></script>
+  <script type="text/javascript">
+contexts['blocklyQuickPi'] = getContext;
+  </script>
   <style>
 table {
   border-collapse: collapse;
