fix link to quickPi lib

--- a/pemFioi/quickAlgo/doc.html
+++ b/pemFioi/quickAlgo/doc.html
@@ -25,7 +25,7 @@ contexts['blocklyTurtle'] = getContext;
   <script type="text/javascript">
 contexts['blocklyProcessing'] = getContext;
   </script>
-  <script type="text/javascript" src="../blocklyQuickPi_lib.js"></script>
+  <script type="text/javascript" src="../quickpi/blocklyQuickPi_lib.js"></script>
   <script type="text/javascript">
 contexts['blocklyQuickPi'] = getContext;
   </script>
